# dataset-phenotypes

./: .all-contributorsrc  .gitignore  CITATION.cff  README.md  bids-phenotype.py  dictionary_examples.json  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
ABCD/: .gitignore  README.md  data_convert.py  dictionary.py
ABCD/nda_data_structure_definitions/: abcd_abcls01.csv  abcd_adbc01.csv  abcd_ant01.csv  abcd_bkfs01.csv  abcd_bpm01.csv  abcd_bpmt01.csv  abcd_cna01.csv  abcd_crpf01.csv  abcd_ddtidp101.csv  abcd_ddtidp201.csv  abcd_ddtifp101.csv  abcd_dmdtifp101.csv  abcd_drsip101.csv  abcd_drsip201.csv  abcd_drsip301.csv  abcd_drsip501.csv  abcd_drsip701.csv  abcd_dti_p101.csv  abcd_dti_p201.csv  abcd_eatqp01.csv  abcd_ehis01.csv  abcd_fbdss01.csv  abcd_fbpap01.csv  abcd_fbpay01.csv  abcd_fbprp01.csv  abcd_fbwpas01.csv  abcd_fes01.csv  abcd_fhxssp01.csv  abcd_fmriqc01.csv  abcd_gdss01.csv  abcd_gish2y01.csv  abcd_hers01.csv  abcd_imgincl01.csv  abcd_ip01.csv  abcd_ksad01.csv  abcd_ksad501.csv  abcd_lpds01.csv  abcd_lpmh01.csv  (+169 more)
ABIDE_I/: ABIDE_LEGEND_V1.02.tsv  README.md  data_convert.py  dictionary.py
ABIDE_II/: ABIDEII_Data_Legend.tsv  README.md  data_convert.py  dictionary.py
GUI/: README.md  dictionary_browser.py
HBN/: README.md  dictionary.py
HCP/: README.md  dictionary.py
NKI/: README.md  dictionary.m  make_dictionaries.m
PNC/: README.md  dictionary.py
UKB/: README.md  dictionary.py
docs/: ABCD_4.md  HCP.md  HCP_1200.md  NKI.md  PNC.md  UKB.md  index.md
examples/: dictionary_examples.csv  dictionary_examples.py  dictionary_examples.tsv
(+659 files in other folders)
