[tool.poetry]
name = "bids-phenotype"
version = "2.0.0"
description = "A command-line interface to convert big neuroimaging dataset tabular phenotype data and dictionaries to BIDS format."
authors = ["Eric Earl <eric.earl@nih.gov>"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
